--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,8 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,8 +25,9 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: build Rust Project
+        run: cargo build --release
+        working-directory: ./remote-lopes
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
